# aegis-scholar

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
docs/: 00-executive-summary.md  00-project-overview.md  00.5-stack-decisions.md  00.7-research-foundation.md  01-architecture-overview.md  01-product-blueprint.md  02-phase-index.md  02-target-architecture.md  03-corpus-authority.md  03-github-wiki-outline.md  04-skill-system.md  04-wiki-export-prep.md  05-product-ux-reorientation.md  05-scholar-discipline-system.md  06-retrieval-architecture.md  07-ingestion-locators.md  10-literature-rag-evidence.md  11-evaluation-harness.md  12-roadmap.md  13-app-boundary-review.md  13-architecture-decisions.md  13-scientific-retrieval-architecture.md  14-local-workspace-hygiene.md  15-scientific-retrieval-contract-map.md  16-openalex-gui-integration-readiness.md  README.md
prompts/: codex-phase-0-7-research-foundation.md  codex-phase-1-corpus-authority.md
schemas/: README.md  answer-draft.schema.json  audit-event.schema.json  chunk.schema.json  citation-locator.schema.json  eval-case.schema.json  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: answer_draft.rs  audit.rs  chat_sessions.rs  chunking.rs  corpus_authority.rs  corpus_paths.rs  errors.rs  evidence.rs  extraction.rs  final_answer.rs  grounded_answer.rs  lib.rs  local_runtime.rs  local_server.rs  locators.rs  main.rs  retrieval.rs  scholar_chat.rs  source_metadata.rs  source_registry.rs
(+21 files in other folders)
