[package]
name = "aegis-scholar"
version = "0.1.0"
description = "AEGIS Scholar desktop core"
authors = ["AEGIS Scholar"]
edition = "2021"
rust-version = "1.77"
build = "build.rs"

[lib]
name = "aegis_scholar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
